# configmate

./: .gitignore  .pylintrc  Makefile  README.md  README.rst  TODO.md  markdownlint.yaml  mypy.ini  pyproject.toml  tox.ini
docs/: conf.py  index.rst  usage.rst
docs/_autosummary/: configmate.base.constants.rst  configmate.base.exceptions.rst  configmate.base.operators.rst  configmate.base.registry.rst  configmate.base.rst  configmate.base.types.rst  configmate.components.aggregators.rst  configmate.components.cli_readers.rst  configmate.components.filereader.rst  configmate.components.interpolators.rst  configmate.components.parsers.rst  configmate.components.rst  configmate.components.selectors.rst  configmate.components.validators.rst  configmate.core.builders.rst  configmate.core.composers.rst  configmate.core.functions.rst  configmate.core.rst  configmate.rst
plugins/: __init__.py
plugins/configmate-pydantic/: README.md  pyproject.toml
plugins/configmate-pydantic/configmate_plugins/pydantic_validator/: __init__.py  pydantic_validator.py
plugins/configmate-pydantic/tests/: test_pydantic_validator.py
plugins/configmate-tomlparser/: README.md  pyproject.toml
plugins/configmate-tomlparser/configmate_plugins/toml_parser/: __init__.py  toml_parser.py
plugins/configmate-yamlparser/: README.md  pyproject.toml
plugins/configmate-yamlparser/configmate_plugins/yaml_parser/: __init__.py  yaml_parser.py
src/configmate/: __init__.py  _utils.py  base.py  cli.py  config_sources.py  core.py  env_interpolator.py  exceptions.py  interface.py  parsing.py  source_reading.py  validation.py
src/configmate/aggregation/: __init__.py  aggregation_strategies.py  aggregator_factory.py  base_aggregator.py  map_aggregators.py
src/configmate/base/: constants.py  exceptions.py  operators.py  registry.py  types.py
src/configmate/cli_reading/: cliarg_filters.py  cliarg_parsers.py  overlaysupplier_factories.py
src/configmate/common/: context.py  exceptions.py  pipeline.py  registry.py  transformations.py  types.py
src/configmate/components/: __init__.py  aggregators.py  cli_readers.py  filereader.py  interpolators.py  parsers.py  section_selectors.py  selectors.py  string_interpolators.py  type_validators.py  validators.py
src/configmate/config_logging/: __init__.py  cli_setup.py  configmate_logger.py
src/configmate/configuration/: configuration_base.py  envvar_config_templates.py
src/configmate/core/: __init__.py  builders.py  composers.py  functions.py
src/configmate/interpolation/: __init__.py  base_interpolator.py  env_interpolator.py  env_var_interpolation.py  interpolator_factory.py
src/configmate/overlay_suppliers/: __init__.py  cli_overlay_factories.py  cliarg_filters.py  cliarg_parsers.py
src/configmate/parsing/: __init__.py  base_parser.py  commandline_parser.py  ini_parser.py  json_parser.py  parser_base.py  parser_factory.py  parsers.py  parsing_backends.py  toml_parser.py  xml_parser.py  yaml_parser.py
src/configmate/reading/: reader_base.py
src/configmate/section_selection/: __init__.py  section_selector_factory.py  section_selectors.py
src/configmate/utils/: envvar_utils.py  file_reading.py
src/configmate/validation/: __init__.py  validation_strategies.py  validator_factory.py
tests/: test_aggregation.py  test_cli_parsing.py  test_dummy.py  test_end_to_end.py  test_envvar_interpolation.py  test_envvar_utils.py  test_inferrable_parser.py  test_interpolator.py  test_parsing_backends.py
tests/test_files/: test.json  test.yml  test_missing.json  test_override.json
