[tool.poetry]
name = "configmate"
version = "0.1.3"
description = "A universal configuration parser for Python."
authors = ["Arthur Böök"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include = "configmate", from = 'src'},
]
include = ["LICENSE"]
keywords = ["configuration", "config", "parser", "config-parser"]

[tool.poetry.urls]
repository = "https://github.com/ArthurBook/configmate"

[tool.poetry.dependencies]
python = "^3.8"
configmate-yamlparser = { version = "*", optional = true }
configmate-tomlparser = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.7.1"
pylint = "^3.0.2"
pytest = "^7.4.2"
tox = "^4.11.3"
isort = "^5.12.0"

[tool.poetry.extras]
yaml = ["configmate-yamlparser"]
toml = ["configmate-tomlparser"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
