[tool.poetry]
name = "configmate-pydantic-validator"
version = "0.1.0"
description = "Extends configmate with pydantic validation logic."
authors = ["Arthur Böök"]
readme = "README.md"
packages = [{ include = "configmate_plugins/pydantic_validator" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.0,<3.0"
configmate = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
