[tool.poetry]
name = "configmate-tomlparser"
version = "0.1.0"
description = "Extends configmate with TOML support"
authors = ["Arthur Böök"]
readme = "README.md"
packages = [{include = "configmate_plugins/toml_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
configmate = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
