[tool.poetry]
name = "configmate-tomlparser"
version = "0.1.1a0"
description = "Extends configmate with TOML support"
authors = ["Arthur Böök"]
readme = "README.md"
packages = [{include = "configmate_plugins/toml_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
toml = "*"
configmate = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
