[tool.poetry]
name = "configmate-yamlparser"
version = "0.1.1"
description = "Extends configmate with YAML support"
authors = ["Arthur Böök"]
readme = "README.md"
packages = [{include = "configmate_plugins/yaml_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "*"
configmate = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
